[package]
name = "sworndisk-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inherit-methods-macro = { git = "https://github.com/jinzhao-dev/inherit-methods-macro", rev = "98f7e3e" }
pod = { git = "https://github.com/jinzhao-dev/pod", rev = "7fa2ed2" }
