[package]
name = "sworndisk-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inherit-methods-macro = {git = "https://github.com/jinzhao-dev/inherit-methods-macro", rev = "98f7e3e"}
pod = {git = "https://github.com/jinzhao-dev/pod", rev = "7fa2ed2"}

anymap = {version = "1.0.0-beta.2", default-features = false, features = ["hashbrown"]}
array-init = "2.1.0"
bitvec = {version = "1.0.1", default-features = false, features = ["atomic", "alloc", "serde"]}
hashbrown = "0.12.3"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
lending-iterator = "0.1.7"
libc = "0.2.147"
log = "0.4"
lru = "0.8.1"
openssl = "0.10.55"
postcard = "1.0.0"
serde = {version = "1.0", features = ["derive"]}
spin = "0.9.8"
static_assertions = "1.1.0"
typetag = "0.2"

# [target.'cfg(target_env = "sgx")'.dependencies]
# sgx_alloc = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}
# sgx_libc = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}
# sgx_rand = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}
# sgx_tcrypto = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}
# sgx_tstd = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum", features = ["backtrace"]}
# sgx_types = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}

[lib]
doctest = false

[features]
default = ["std"]
jinux = []
linux = []
occlum = []
std = []

[[bench]]
name = "bench"
harness = false
