[package]
name = "sworndisk-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
bindings = { path = "../linux/bindings", optional = true }
inherit-methods-macro = {git = "https://github.com/asterinas/inherit-methods-macro", rev = "98f7e3e"}
pod = {git = "https://github.com/asterinas/pod", rev = "7fa2ed2"}

ahash = { version = "=0.7.7", default-features = false }
anymap = { version = "=1.0.0-beta.2", default-features = false, features = ["hashbrown"] }
array-init = "2.1.0"
bitvec = {version = "1.0.1", default-features = false, features = ["atomic", "alloc", "serde"]}
bittle = "0.5.6"
hashbrown = { version = "=0.12.3", features = ["serde"] }
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
lending-iterator = "=0.1.7"
libc = "0.2.147"
log = { version = "0.4", optional =  true }
lru = "=0.8.1"
openssl = { version = "0.10.55", optional = true }
postcard = "=1.0.6"
rbtree = "0.2.0"
serde = { version = "=1.0.188", default-features = false, features = ["alloc", "derive"] }
spin = { version = "0.9.8", optional = true }
static_assertions = "1.1.0"

[lib]
doctest = false

[features]
default = ["std"]
jinux = []
linux = []
occlum = []
std = ["log", "openssl", "spin"]

[[bench]]
name = "bench"
harness = false

# [target.'cfg(target_env = "sgx")'.dependencies]
# sgx_alloc = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}
# sgx_libc = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}
# sgx_rand = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}
# sgx_tcrypto = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}
# sgx_tstd = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum", features = ["backtrace"]}
# sgx_types = {git = "https://github.com/occlum/incubator-teaclave-sgx-sdk", branch = "sgx_2.20_for_occlum"}
